# OPENCLASSROOMS_ML_OPS

./: .env.example  .gitignore  DEPLOYMENT_GUIDE.txt  MLOPS_DEPLOYMENT.md  README.md  RENDER_SETUP.md  RESUME_PROJET.txt  exigence.txt  launch_all.sh  pyproject.toml  render.yaml  run.py
.github/workflows/: ci-cd.yml  deploy.yml
api/: Dockerfile  README.md  main.py  models.py  requirements.txt
home-credit-scoring/: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  render.yaml  setup.py
home-credit-scoring/.github/workflows/: ci.yml  deploy.yml
home-credit-scoring/api/: main.py  models.py  requirements.txt
home-credit-scoring/memory-bank/: 01_projet_overview.txt  02_mlops_vocabulaire.txt  03_exigences_couverture.txt  04_resultats_modele.txt
home-credit-scoring/models/: model_config.json  submission.csv
home-credit-scoring/notebooks/: 02_Preprocessing_Features.ipynb  03_Model_Training_MLflow.ipynb
home-credit-scoring/reports/: data_drift_report.html  data_quality_report.html  evidently_full_report.html
home-credit-scoring/src/: __init__.py  preprocessing.py
home-credit-scoring/streamlit_app/: Dockerfile  app.py  requirements.txt
home-credit-scoring/tests/: README.md  conftest.py  test_api.py  test_deployment_checks.py  test_preprocessing.py
mlflow/: Dockerfile  README.md  requirements.txt
mlruns/0/: meta.yaml
mlruns/992006039401835390/: meta.yaml
models/: lgbm_model.joblib  preprocessor.joblib  test_predictions.csv
notebooks/: 01_EDA.ipynb
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/446811177754564983/: meta.yaml
notebooks/mlruns/446811177754564983/169b2338d7224da2801ea8dda14d64e3/: meta.yaml
notebooks/mlruns/446811177754564983/169b2338d7224da2801ea8dda14d64e3/metrics/: best_iteration  optimal_threshold  train_accuracy  train_auc  train_business_cost  val_accuracy  val_auc  val_business_cost  val_f1_score  val_normalized_cost  val_precision  val_recall
notebooks/mlruns/446811177754564983/169b2338d7224da2801ea8dda14d64e3/tags/: mlflow.runName
notebooks/mlruns/446811177754564983/fe2140dd589f42f8a660012531d17f3f/: meta.yaml
notebooks/mlruns/446811177754564983/fe2140dd589f42f8a660012531d17f3f/metrics/: best_iteration  optimal_threshold  train_accuracy  train_auc  train_business_cost  val_accuracy  val_auc  val_business_cost  val_f1_score  val_normalized_cost  val_precision  val_recall
notebooks/mlruns/446811177754564983/models/m-a4679c923b1d4c10a48366e3710aabf5/: meta.yaml
notebooks/mlruns/models/home_credit_model/: meta.yaml
reports/: feature_importance.csv  metrics_report.txt
scripts/: download_data.py
src/: feature_importance.py  inference.py  metrics.py  mlflow_utils.py  preprocessing.py  train.py
streamlit_app/: Dockerfile  README.md  api_client.py  app.py  app_old.py  constants.py
tests/: README.md  test_api.py  test_cost.py  test_deployment_checks.py  test_inference.py  test_preprocessing.py
(+37 files in other folders)
